k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: default
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: api
