k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: default
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
  selector:
    app: mysql
